// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validating rule docs > no-confusing-void-expression.mdx > no-confusing-void-expression.mdx must start with frontmatter description 1`] = `
"Incorrect

interface Foo {
  bar?: string;
  num?: number;
}

const foo: Foo = getFoo();
const isEqualsBar = foo.bar! == 'hello';
                    ~~~~~~~~~~~~~~~~~~~ Confusing combination of non-null assertion and equality test like \`a! == b\`, which looks very similar to \`a !== b\`.
const isEqualsNum = 1 + foo.num! == 2;
                    ~~~~~~~~~~~~~~~~~ Confusing combination of non-null assertion and equality test like \`a! == b\`, which looks very similar to \`a !== b\`.
"
`;

exports[`Validating rule docs > no-confusing-void-expression.mdx > no-confusing-void-expression.mdx must start with frontmatter description 2`] = `
"Correct

interface Foo {
  bar?: string;
  num?: number;
}

const foo: Foo = getFoo();
const isEqualsBar = foo.bar == 'hello';
const isEqualsNum = (1 + foo.num!) == 2;
"
`;
